--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,5 +16,7 @@
   <div id="container">
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-button href="my-custom-page/1">Go By Link </ion-button>
+    <ion-button (click)="goByEvent()">Go By Event </ion-button>
   </div>
 </ion-content>
