--- a/src/app/component/component.page.html
+++ b/src/app/component/component.page.html
@@ -1,19 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>component</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">component</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <div id="container">
-   
-  </div>
 </ion-content>
