--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -54,7 +54,7 @@
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      Nothing can tear us apart.
     </ion-card-content>
   </ion-card>
 
@@ -65,7 +65,7 @@
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      Look at the sky.
     </ion-card-content>
   </ion-card>
 
@@ -76,11 +76,10 @@
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      “Try not. Do or do not. There is no try.” —Yoda, The Empire Strikes Back
     </ion-card-content>
   </ion-card>
-
- 
+    
   <ion-button (click) = logout()> LOG OUT</ion-button>
   
 </ion-content>
