--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -1,60 +1,63 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title><h1>Welcome, {{username}}!</h1></ion-title>
+    <ion-title>Welcome, {{username}}!</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">  
+<ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">dashboard</ion-title>
+      <ion-title size="large">Dashboard</ion-title>
     </ion-toolbar>
   </ion-header>
-
 
   <ion-header>
     <ion-toolbar>
-      <ion-title>Movie Selection</ion-title>
+      <ion-title><h3>Movie Selection</h3></ion-title>
+      <ion-searchbar color="light" placeholder="Search"></ion-searchbar>
     </ion-toolbar>
   </ion-header>
-  <ion-content class="ion-padding">
-    <ion-fab slot="fixed" vertical="top" horizontal="end" [edge]="true">
+  
+  <ion-fab slot="fixed" vertical="top" horizontal="end" [edge]="true">
+    <ion-fab-button>
+      <ion-icon name="chevron-down-circle"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="bottom">
       <ion-fab-button>
-        <ion-icon name="chevron-down-circle"></ion-icon>
+        <ion-icon name="document"></ion-icon>
       </ion-fab-button>
-      <ion-fab-list side="bottom">
-        <ion-fab-button>
-          <ion-icon name="document"></ion-icon>
-        </ion-fab-button>
-        <ion-fab-button>
-          <ion-icon name="color-palette"></ion-icon>
-        </ion-fab-button>
-        <ion-fab-button>
-          <ion-icon name="globe"></ion-icon>
-        </ion-fab-button>
-      </ion-fab-list>
-    </ion-fab>
-    <br>
-    <br>
-    <ion-tabs>
-      <ion-tab-bar slot="bottom">
-        <ion-tab-button tab="home">
-          <ion-icon name="home"></ion-icon>
-          <ion-label>Home</ion-label>
-        </ion-tab-button>
-        <ion-tab-button tab="component">
-          <ion-label>Component</ion-label>
-        </ion-tab-button>
-      </ion-tab-bar>
-    </ion-tabs> 
+      <ion-fab-button>
+        <ion-icon name="color-palette"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button>
+        <ion-icon name="globe"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
+  
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="home">
+        <ion-icon name="home"></ion-icon>
+        <ion-label>Home</ion-label>
+      </ion-tab-button>
+      <ion-tab-button tab="calculator">
+        <ion-icon name="calculator"></ion-icon>
+        <ion-label>Calculator</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+   
+  </ion-tabs>
+
   <ion-card class="card">
     <ion-card-header>
-      <ion-card-title>Movie 3</ion-card-title>
+      <ion-card-title>Movie 1</ion-card-title>
+      <ion-icon name="heart" aria-hidden="true"></ion-icon>
       <ion-card-subtitle>How to Survive</ion-card-subtitle>
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      Nothing can tear us apart.
     </ion-card-content>
   </ion-card>
 
@@ -63,24 +66,22 @@
       <ion-card-title>Movie 2</ion-card-title>
       <ion-card-subtitle>Something about stars</ion-card-subtitle>
     </ion-card-header>
-  
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      Look at the sky
     </ion-card-content>
   </ion-card>
 
   <ion-card class="cards">
     <ion-card-header>
-      <ion-card-title>Movie 2</ion-card-title>
+      <ion-card-title>Movie 3</ion-card-title>
       <ion-card-subtitle>Star Wars</ion-card-subtitle>
     </ion-card-header>
   
     <ion-card-content>
-      Here's a small text description for the card content. Nothing more, nothing less.
+      “Try not. Do or do not. There is no try.” —Yoda, The Empire Strikes Back
     </ion-card-content>
   </ion-card>
-
- 
-  <ion-button (click) = logout()> LOG OUT</ion-button>
   
+  <ion-button (click)="logout()" expand="block">LOG OUT</ion-button>
+  <ion-checkbox>I agree to the terms and conditions</ion-checkbox>
 </ion-content>
