--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,9 +1,9 @@
 .ios body{
-  --ion-background-color: #000000;
+  --ion-background-color: #4b7699;
   --ion-text-color: #ffffff;
 }
 
 .md body{
-  --ion-background-color: #ffffff;
+  --ion-background-color: #764a9b;
   --ion-text-color: #000000;
 }
