--- a/src/app/calculator/calculator.page.html
+++ b/src/app/calculator/calculator.page.html
@@ -1,11 +1,29 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Calculator</ion-title>
+    <ion-title>Welcome {{username}}</ion-title>
   </ion-toolbar>
 </ion-header>
+
 <ion-content class="ion-padding">
+
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button (click)="dashboard()" tab="home">
+        <ion-icon name="home"></ion-icon>
+        <ion-label>Home</ion-label>
+      </ion-tab-button>
+      <ion-tab-button name="calculator" tab="calculator">
+        <ion-icon name="calculator"></ion-icon>
+        <ion-label>Calculator</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
+
   <div class="calculator">
-    <ion-input type="text" [(ngModel)]="result" readonly></ion-input>
+    <ion-item>
+      <ion-label position="stacked">Calculate</ion-label>
+      <ion-input type="text" [(ngModel)]="result" readonly></ion-input><br>
+    </ion-item>
     <ion-row>
       <ion-col size="3"><ion-button expand="block" color="medium" (click)="showResult('7')">7</ion-button></ion-col>
       <ion-col size="3"><ion-button expand="block" color="medium" (click)="showResult('8')">8</ion-button></ion-col>
@@ -34,5 +52,4 @@
       <ion-col size="12"><ion-button expand="block" color="success"(click)="calculate()">=</ion-button></ion-col>
     </ion-row>
   </div>
-
 </ion-content>
