--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Welcome, {{username}}!</ion-title>
+    <ion-title>Welcome, {{username}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
