--- a/src/app/calculator/calculator.page.html
+++ b/src/app/calculator/calculator.page.html
@@ -47,6 +47,7 @@
       <ion-col size="3"><ion-button expand="block" color="medium" (click)="showResult('.')">.</ion-button></ion-col>
       <ion-col size="3"><ion-button expand="block" color="danger" (click)="clearResult()">C</ion-button></ion-col>
       <ion-col size="3"><ion-button expand="block" (click)="showResult('+')">+</ion-button></ion-col>
+      <ion-col size="3"><ion-button expand="block" color="warning" (click)="clearOneNumber()">x</ion-button></ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="12"><ion-button expand="block" color="success"(click)="calculate()">=</ion-button></ion-col>
