--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,7 @@
+:host {
+  --ion-background-color: #394e49;
+  --ion-text-color: #ffffff;
+}
 #container {
   text-align: center;
 
@@ -18,7 +22,7 @@
   line-height: 22px;
 
   color: #8c8c8c;
-
+  
   margin: 0;
 }
 
