--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,46 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+:host {
+  --ion-background-color: #8ebeac;
+  --ion-text-color: #ffffff;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ion-card {
+  width: 100%;
+  margin-bottom: 20px;
 }
 
-#container a {
-  text-decoration: none;
+ion-card-header {
+  background-color: #1e584a;
+}
+
+ion-item {
+  margin-bottom: 10px;
+}
+
+ion-button {
+  margin-top: 10px;
+  --background: #7eb1a0;
+
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #468092;
+}
+
+tr:hover {
+  background-color: #211f3f;
 }
