--- a/src/app/sign-up/sign-up.page.html
+++ b/src/app/sign-up/sign-up.page.html
@@ -25,6 +25,7 @@
         <ion-input [(ngModel)]="confirmPassword" name="confirmPassword" type="password" required></ion-input>
       </ion-item>
       <ion-button expand="block" type="submit">SignUp</ion-button>
+      <ion-button expand="block" fill="outline" routerLink="/sign-in">Log In</ion-button>
     </form>
   </ion-content>
 </ion-content>
