--- a/src/app/sign-in/login.page.html
+++ b/src/app/sign-in/login.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>Log-In</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">login</ion-title>
+      <ion-title size="large">Log-In</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content >
@@ -21,6 +21,7 @@
         <ion-input [(ngModel)]="password" name="password" type="password" required></ion-input>
       </ion-item>
       <ion-button expand="block" type="submit">Login</ion-button>
+      <ion-button expand="block" fill="outline" routerLink="/sign-up">Sign Up</ion-button>
     </form>
   </ion-content>
 </ion-content>
