--- a/src/app/sign-up/sign-up.page.scss
+++ b/src/app/sign-up/sign-up.page.scss
@@ -9,12 +9,27 @@
     padding: 20px;
     border-radius: 8px;
     background: #2d2d2d;
+    margin-top: 10%;
   
 }
   
-ion-button {
-    --background: #4caf50;
-    --border-radius: 5px;
-}
+.login-button {
+    margin-top: 16px;
+    --background: #506994;
+    --color: rgb(71, 40, 40);
+    --border-radius: 4px;
+  }
+  
+  .signup-button {
+    margin-top: 8px;
+    --border-color: #5faca5;
+    --color: #279e7a;
+    --border-radius: 4px;
+    --background: transparent;
+  }
+  
+  ion-button {
+    width: 100%;
+  }
 
 
